--- a/views/reportes/filtrosIndividual.twig
+++ b/views/reportes/filtrosIndividual.twig
@@ -6,21 +6,21 @@
 		<form id="filtros">
 			<div class="row ">
 				<div class="col-sm-3">
-					<b>Canal</b> <br>
+					<b>Plaza</b> <br>
 					<div class="input-group">
-						<select class="form-control form-select select2" name="canal_usuario" id="canal_usuario">
+						<select class="form-control select2" name="plaza_usuario[]" id="plaza_usuario" multiple>
 							<option value=""></option>
-							<option v-for="(v,k) in canal_usuario" v-html="v" :value="k"></option>
+							<option v-for="(v,k) in plaza_usuario" v-html="v" :value="k"></option>
 						</select>
 					</div>
 				</div>
 
 				<div class="col-sm-3">
-					<b>Plaza</b> <br>
+					<b>Canal</b> <br>
 					<div class="input-group">
-						<select class="form-control form-select select2" name="plaza_usuario" id="plaza_usuario">
+						<select class="form-control select2" name="canal_usuario[]" id="canal_usuario" multiple>
 							<option value=""></option>
-							<option v-for="(v,k) in plaza_usuario" v-html="v" :value="k"></option>
+							<option v-for="(v,k) in canal_usuario" v-html="v" :value="k"></option>
 						</select>
 					</div>
 				</div>
