--- a/views/cliente/editar.twig
+++ b/views/cliente/editar.twig
@@ -38,6 +38,14 @@
 							<div class="col-md-4 col-informacion">
 								<input type="text" class="form-control" v-model="model.lugar_trabajo" placeholder="Lugar de trabajo" v-autoname/>
 							</div>
+
+							<label for="inputName" class="col-md-2 form-label">Gestionar</label>
+							<div class="col-md-4 col-informacion">
+								<select class="form-control form-select select2" v-model="model.gestionar" required v-autoname>
+									<option value="si">SI</option>
+									<option value="no">NO</option>
+								</select>
+							</div>
 						</div>
 
 						<div class=" row mb-4">
