--- a/views/reportes/reporteHoras.twig
+++ b/views/reportes/reporteHoras.twig
@@ -150,6 +150,14 @@
                             theme: "classic",
                             initSelection: function(element, callback) {}
                         });
+                        $("#marca").select2({
+                            theme: "classic",
+                            initSelection: function(element, callback) {}
+                        });
+                        $("#campana").select2({
+                            theme: "classic",
+                            initSelection: function(element, callback) {}
+                        });
                         self.consultar();
                     });
                     $('.select2').select2({
