--- a/views/reportes/contactabilidad.twig
+++ b/views/reportes/contactabilidad.twig
@@ -140,6 +140,10 @@
                             theme: "classic",
                             initSelection: function(element, callback) {}
                         });
+                        $("#campana").select2({
+                            theme: "classic",
+                            initSelection: function(element, callback) {}
+                        });
                         self.consultar();
                     });
                     // self.consultar();
