--- a/views/reportes/filtrosContactabilidad.twig
+++ b/views/reportes/filtrosContactabilidad.twig
@@ -6,6 +6,16 @@
 		<form id="filtros">
 			<div class="row ">
 				<div class="col-sm-3">
+					<b>Campaña</b> <br>
+					<div class="input-group">
+						<select class="form-control select2" name="campana[]" id="campana" multiple>
+							<option value=""></option>
+							<option v-for="(v,k) in campana_asignacion" v-html="v" :value="k"></option>
+						</select>
+					</div>
+				</div>
+
+				<div class="col-sm-3">
 					<b>Zona</b> <br>
 					<div class="input-group">
 						<select class="form-control select2" name="plaza_usuario[]" id="plaza_usuario" multiple>
@@ -44,6 +54,8 @@
                     plaza_usuario: {{ plaza_usuario|raw }},
                     horas: {{ horas|raw }},
                     minutos: {{ minutos|raw }},
+					campana_asignacion: {{ campana_asignacion|raw }},
+					marca: {{ marca|raw }},
                 },
                 methods: {},
             });
