--- a/views/reportes/general.twig
+++ b/views/reportes/general.twig
@@ -144,6 +144,10 @@
                             theme: "classic",
                             initSelection: function(element, callback) {}
                         });
+                        $("#campana").select2({
+                            theme: "classic",
+                            initSelection: function(element, callback) {}
+                        });
                         self.consultar();
                     });
                     $('.select2').select2({
