--- a/views/reportes/filtrosIndividual.twig
+++ b/views/reportes/filtrosIndividual.twig
@@ -46,6 +46,13 @@
 						<option v-for="(v,k) in minutos" v-html="v" :value="k"></option>
 					</select>
 				</div>
+
+				<div class="col-sm-3">
+					<b>Meta diaria</b> <br>
+					<div class="input-group">
+						<input type="text" class="form-control" name="meta_diaria" id="meta_diaria" />
+					</div>
+				</div>
 			</div>
 		</form>
 	</div>
