--- a/views/reportes/individual.twig
+++ b/views/reportes/individual.twig
@@ -31,7 +31,9 @@
                             <td style="text-align: center;" v-html="d.refinancia"></td>
                             <td style="text-align: center;" v-html="d.contactabilidad"></td>
                             <td style="text-align: center;" v-html="d.efectividad"></td>
-                            <td style="text-align: center;" v-html="d.meta_diaria"></td>
+                            <td style="text-align: center;">
+                                <input type="text" class="form-control" v-on:keyup="calcular" v-model="d.meta_diaria" v-autoname/>
+                            </td>
                             <td style="text-align: center;" v-html="d.meta_alcanzada"></td>
 						</tr>
 						</tbody>
@@ -76,6 +78,17 @@
                         self.total = res['total'];
                         console.log(res);
                     })
+                },
+                calcular: function () {
+                    var self = this;
+                    $.each(self.datos, function (key, value) {
+                        var meta_alcanzada = 0.00;
+                        if(parseFloat(value.meta_diaria) > 0){
+                            meta_alcanzada = (parseFloat(value.cierre_efectivo) / parseFloat(value.meta_diaria)) * 100;
+                        }
+                        self.datos[key].meta_alcanzada = meta_alcanzada.toFixed(2);
+                    });
+                    // app.$forceUpdate();
                 },
             },
             mounted: function () {
