Individual: la meta diaria debe ser editable .  Cambar REFIS por REFINANCIA y agregar NOTIFCADO en otro columna al lado de REFIS

--- a/views/reportes/individual.twig
+++ b/views/reportes/individual.twig
@@ -17,7 +17,8 @@
 						<tr style="background-color: #95b8f6;">
 							<th>GESTOR</th>
                             <th>TOTAL NEGOCIACIONES</th>
-							<th>REFIS</th>
+							<th>REFINANCIA</th>
+                            <th>NOTIFICADO</th>
 							<th>CONTACTABILIDAD</th>
                             <th>EFECTIVIDAD</th>
                             <th>META DIARIA</th>
@@ -29,6 +30,7 @@
 							<td style="text-align: center;" v-html="d.gestor"></td>
                             <td style="text-align: center;" v-html="d.cierre_efectivo"></td>
                             <td style="text-align: center;" v-html="d.refinancia"></td>
+                            <td style="text-align: center;" v-html="d.notificado"></td>
                             <td style="text-align: center;" v-html="d.contactabilidad"></td>
                             <td style="text-align: center;" v-html="d.efectividad"></td>
                             <td style="text-align: center;">
