--- a/views/admin/usuarios/index.twig
+++ b/views/admin/usuarios/index.twig
@@ -42,8 +42,8 @@
 						<div class="col-md-4">
 							<select id="activo" name="activo" class="form-control form-select">
 								<option value=""></option>
-								<option value="1">SI</option>
-								<option value="0">NO</option>
+								<option value="si">SI</option>
+								<option value="no">NO</option>
 							</select>
 						</div>
 					</div>
